syntax = "proto3";

package ekube.cluster.v1;
option go_package = "ekube/pb/api/cluster/v1;cluster";

import "ekube/pb/meta/meta.proto";

// Cluster k8s集群相关信息
message Cluster {
  // 集群状态
  // @gotags: json:"meta" bson:",inline"
  meta.Meta meta = 1;
  // 基础信息
  // @gotags: json:"spec" bson:",inline"
  CreateClusterRequest spec = 2;
  // 集群信息
  // @gotags: json:"info" bson:",inline"
  ServerInfo info = 3;
  // 集群状态
  // @gotags: json:"status" bson:",inline"
  Status status = 4;
}

message ServerInfo {
  // k8s的地址
  // @gotags: json:"server" bson:"server"
  string server = 1;
  // k8s版本
  // @gotags: json:"version" bson:"version"
  string version = 2;
  // 连接用户
  // @gotags: json:"auth_user" bson:"auth_user"
  string auth_user = 3;
}

message Status {
  // 检查时间
  // @gotags: json:"check_at" bson:"check_at"
  int64 check_at  = 1;
  // API Server是否正常
  // @gotags: json:"is_alive" bson:"is_alive"
  bool is_alive  = 2;
  // 异常消息
  // @gotags: json:"message" bson:"message"
  string message = 10;
}

message CreateClusterRequest {
  // 创建人
  // @gotags: json:"create_by" form:"create_by" bson:"create_by"
  string create_by = 1;
  // 集群提供商
  // @gotags: json:"provider" bson:"provider" form:"provider" validate:"required"
  string provider = 2;
  // 集群所处地域
  // @gotags: json:"region" bson:"region" form:"region" validate:"required"
  string region = 3;
  // 名称
  // @gotags: json:"name" bson:"name" form:"name" validate:"required"
  string name = 4;
  // 集群客户端访问凭证
  // @gotags: json:"kube_config" bson:"kube_config" form:"kube_config" validate:"required"
  string kube_config = 5;
  // 集群描述
  // @gotags: json:"description" form:"description" bson:"description"
  string description = 6;
  // 集群标签, env=prod
  // @gotags: json:"labels" form:"labels" bson:"labels"
  map<string, string> labels = 7;
}

// ClusterSet
message ClusterSet {
  // 分页时，返回总数量
  // @gotags: json:"total"
  int64 total = 1;
  // 一页的数据
  // @gotags: json:"items"
  repeated Cluster items = 2;
}